src/objects/App_Version__c.object
<CustomObject>
    <description>Object for SW Engineering, to track various version of Applications;
related to Application object via LookUp</description>
    <fields>
        <fullName>Application_ID__c</fullName>
        <formula>Application__r.Application_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the related Application record</inlineHelpText>
        <label>Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application Name</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>AppVersions</relationshipLabel>
        <relationshipName>AppVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JIRA_ID__c</fullName>
        <label>JIRA ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_URL__c</fullName>
        <label>JIRA URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Location__c</fullName>
        <label>Launch Location</label>
        <picklist>
            <picklistValues>
                <fullName>Apple Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Play Store</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>App Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>App Version ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>